--- a/static/prastuti/css/style.css
+++ b/static/prastuti/css/style.css
@@ -34,7 +34,7 @@ a:hover {
 }
 
 .name_image {
-  height: 70px;
+  height: 40px;
 }
 
 .navbar {
@@ -65,6 +65,8 @@ a:hover {
   transition: all ease 0.8s;
   position: relative;
   z-index: 0;
+  font-size: larger;
+  font-weight: bolder;
 }
 
 .nav-link {
@@ -293,7 +295,7 @@ h4 {
 }
 
 .footer_image{
-  height: 70px;
+  height: 30px;
 }
 
 .footer_text{
@@ -513,7 +515,7 @@ h4 {
 
   .nav-item {
     margin: 0px 10px;
-    font-size: 0.8rem;
+    /* font-size: 0.8rem; */
   }
 
   .navbtn {
@@ -563,7 +565,7 @@ h4 {
 
   .nav-item {
     margin: 0px 10px;
-    font-size: 0.8rem;
+    /* font-size: 0.8rem; */
   }
 
   .navbtn {
