--- a/templates/prastuti/schedule.html
+++ b/templates/prastuti/schedule.html
@@ -39,7 +39,7 @@
                 <a href="https://drive.google.com/file/d/1TNQWI1sBOPpEtLtB4DppqaO6BdsK5JQm/view?usp=sharing" target="_blank">Graph & its Algorithms</a>
               </li>
               <li>
-                <a href="#" target="_blank">Dynamic Programming and Number Theory</a>
+                <a href="https://drive.google.com/file/d/1OwunXfaOTgOz_LOQWjg6UMDPJ_PiMqWu/view?usp=sharing" target="_blank">Dynamic Programming and Number Theory</a>
               </li>
             </ul>
           </div>
@@ -86,10 +86,10 @@
           <div class="prev_workshop">Previous Workshops</div>
           <ul>
             <li>
-              <a href="#" target="_blank">Basics of Python</a>
+              <a href="https://drive.google.com/file/d/1eekhMeRqW5ql1A2AM29qZ_wWItVxh19C/view?usp=sharing" target="_blank">Basics of Python</a>
             </li>
             <li>
-              <a href="#" target="_blank">Fundamentals of Modern Cryptography</a>
+              <a href="https://drive.google.com/file/d/1PwwPhx4ZJJEOdALdhrqH8XgPnlxVi0PI/view?usp=sharing" target="_blank">Fundamentals of Modern Cryptography</a>
             </li>
           </ul>
         </div>
@@ -134,7 +134,10 @@
           <div class="prev_workshop">Previous Workshops</div>
           <ul>
             <li>
-              <a href="#" target="_blank">Basics of Python</a>
+              <a href="https://drive.google.com/file/d/1eekhMeRqW5ql1A2AM29qZ_wWItVxh19C/view?usp=sharing" target="_blank">Basics of Python</a>
+            </li>
+            <li>
+              <a href="#" target="_blank">Concepts of Data Preprocessing</a>
             </li>
           </ul>
         </div>
@@ -144,7 +147,7 @@
           <div class="up_workshop">Upcoming workshops</div>
           <ul>
             <li>
-              <a href="#" target="_blank">Machine Learning</a><br />
+              <a href="#" target="_blank">Machine Learning Algorithms</a><br />
               <small><cite>Feb 16 | 6:30PM - 8:00PM</cite></small>
             </li>
           </ul>
@@ -178,7 +181,10 @@
           <div class="prev_workshop">Previous Workshops</div>
           <ul>
             <li>
-              <a href="#" target="_blank">Basics of PSIM/Matlab</a>
+              <a href="https://drive.google.com/file/d/1_RsAll_coIEyFalj3Eup_dQLZHwphbqa/view?usp=sharing" target="_blank">Basics of PSIM/Matlab</a>
+            </li>
+            <li>
+              <a href="https://drive.google.com/file/d/1-2fKVM-yl5dCxQUb3m16V9lIHUV2_-TQ/view?usp=sharing" target="_blank">Basics of Power Electronics</a>
             </li>
           </ul>
         </div>
@@ -188,8 +194,8 @@
           <div class="up_workshop">Upcoming workshops</div>
           <ul>
             <li>
-              <a href="#" target="_blank">Basics of Power Electronics</a><br />
-              <small><cite>Feb 12 | 11:00AM - 12:30PM</cite></small>
+              <a href="#" target="_blank">Converter Inverter 3-phase Rectifier</a><br />
+              <small><cite>March 7 | 11:00AM - 12:30PM</cite></small>
             </li>
           </ul>
         </div>
@@ -228,6 +234,9 @@
             <li>
               <a href="#" target="_blank">Combinational Circuits</a>
             </li>
+            <li>
+              <a href="#" target="_blank">Flip flops</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -236,8 +245,8 @@
           <div class="up_workshop">Upcoming workshops</div>
           <ul>
             <li>
-              <a href="https://bit.ly/2Np8uTN" target="_blank">Flip flops</a><br />
-              <small><cite>Feb 13 | 11:00AM - 12:30PM</cite></small>
+              <a href="https://bit.ly/2Np8uTN" target="_blank">Counters</a><br />
+              <small><cite>March 5 | 6:30PM - 8:00PM</cite></small>
             </li>
           </ul>
         </div>
