--- a/templates/events/codigo.html
+++ b/templates/events/codigo.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block body_block %}
 <div class="light pt-3 pt-lg-5 pb-2 text-light container-fluid"
-  style="margin-top: 76.3px; margin-bottom: -1px; background-color: #0a043c;">
+  style="margin-top: 76.3px; margin-bottom: -1px; background-color: black;">
   <div class="container">
     <div class="section-header">
       <h1 class="font-weight-bold mb-5 eventName">
@@ -29,6 +29,7 @@
         <h2 class="font-weight-bold mb-1 mt-4" style="font-family: 'Righteous', cursive; color:#e27802">Description</h2>
         <p class="pt-0" style="font-family: 'Monda', sans-serif; color:#cdd0cb;"> Codigo is a competitive
            programming event. This event will help you to solve real life problems using computer programming.
+            The main focus will be on important data structures and algorithms used in problem solving.
             The event will be organised on HackerRank.<br><br> Happy Coding.
         </p>
         <a class="btn btn-outline-danger btn-md mt-4 px-3 rounded-0 no-btn-shadow " data-tilt target="_blank"
@@ -57,7 +58,7 @@
             </p>
           </li>
           <li>
-            <a href="#" target="_blank" class="workshop_link">
+            <a href="https://drive.google.com/file/d/18IpFkYoFASBe2GmOSRpwN2f7HjODepwW/view?usp=sharing" target="_blank" class="workshop_link">
               <h4 style="font-family: 'Russo One', sans-serif;">Dynamic Programming and Number Theory</h4>
             </a>
             <p style="font-family: 'Monda', sans-serif;color:#cdd0cb;">Overlapping substructure, Dynamic programming
