--- a/templates/events/consilium.html
+++ b/templates/events/consilium.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block body_block %}
 <div class="light pt-3 pt-lg-5 pb-2 text-light container-fluid"
-  style="margin-top: 76.3px; margin-bottom: -1px; background-color: #0a043c;">
+  style="margin-top: 76.3px; margin-bottom: -1px; background-color: black;">
   <div class="container">
     <div class="section-header">
       <h1 class="font-weight-bold mb-5 eventName">
@@ -54,6 +54,13 @@
             <p style="font-family: 'Monda', sans-serif;color:#cdd0cb;">Binary Number Representation-Unsigned magnitude 
               representation, Signed magnitude Representation, 1's complement representation, 2's complement 
               representation; Combinational Circuits-Adders, Decoder, Encoder, Multiplexer, Demultiplexer.
+            </p>
+          </li>
+          <li>
+            <a href="#" target="_blank" class="workshop_link">
+              <h4 style="font-family: 'Russo One', sans-serif;">Flip Flops</h4>
+            </a>
+            <p style="font-family: 'Monda', sans-serif;color:#cdd0cb;"> 
             </p>
           </li>
         </ol>
