--- a/templates/events/cryptx.html
+++ b/templates/events/cryptx.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block body_block %}
 <div class="light pt-3 pt-lg-5 pb-2 text-light container-fluid"
-  style="margin-top: 76.3px; margin-bottom: -1px; background-color: #0a043c;">
+  style="margin-top: 76.3px; margin-bottom: -1px; background-color: black;">
   <div class="container">
     <div class="section-header">
       <h1 class="font-weight-bold mb-5 eventName">
