--- a/templates/events/recognizance.html
+++ b/templates/events/recognizance.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block body_block %}
 <div class="light pt-3 pt-lg-5 pb-2 text-light container-fluid"
-  style="margin-top: 76.3px; margin-bottom: -1px; background-color: #0a043c;">
+  style="margin-top: 76.3px; margin-bottom: -1px; background-color: black;">
   <div class="container">
     <div class="section-header">
       <h1 class="font-weight-bold mb-5 eventName">
@@ -51,6 +51,52 @@
                and Jupyter. Introduction to Python (print, variables, Interpreter), Control Flow Tools (if-else, while,
                 for, range, break), Function, Installing and importing modules and packages, File reading and writing,
                  Basic Data Structures (Numpy array, Lists, Tuples, Dictionaries), Pandas, Matplotlib
+            </p>
+          </li>
+          <li>
+            <a href="#" target="_blank" class="workshop_link">
+              <h4 style="font-family: 'Russo One', sans-serif;">Concepts of Data Preprocessing</h4>
+            </a>
+            <p style="font-family: 'Monda', sans-serif;color:#cdd0cb;">A brief conceptual walkthrough will be given
+               on how to examine patterns and preprocess large, noisy raw data into something more meaningful set of
+                features that we would be fed into any machine learning algorithm. We would be briefing on scikit’s
+                 sklearn library and its functions like Normalize, Polynomial Features, Transforms, and using Matplotlib
+                  for Plots and histograms. We would also be touching on how to parse outliers in the dataset using
+                   Pandas.
+            </p>
+          </li>
+          <li>
+            <a href="#" target="_blank" class="workshop_link">
+              <h4 style="font-family: 'Russo One', sans-serif;">Machine Learning Algorithms</h4>
+            </a>
+            <p style="font-family: 'Monda', sans-serif;color:#cdd0cb;">We would be Introducing you to machine 
+              learning algorithms like Linear Regression, Logistic Regression, SVM, Decision Trees, Random Forests 
+              and be introducing to the core concepts of Loss, Entropy and will be demonstrating their working with 
+              the help of sklearn libraries.
+            </p>
+          </li>
+          <li>
+            <a href="#" target="_blank" class="workshop_link">
+              <h4 style="font-family: 'Russo One', sans-serif;">Introduction to Neural Networks</h4>
+            </a>
+            <p style="font-family: 'Monda', sans-serif;color:#cdd0cb;">With the advent of these powerful 
+              algorithms which are easily able to learn any linear or non-linear correlation between the features 
+              and labels we preferably choose this as our weapon of choice for large and complex datasets. We would 
+              be touching on the core mathematical intuitions of the neural networks, and would demonstrate on 
+              implementing a simple neural network architecture and train it using tensorflow.
+            </p>
+          </li>
+          <li>
+            <a href="#" target="_blank" class="workshop_link">
+              <h4 style="font-family: 'Russo One', sans-serif;">Dwelling into Deep Learning</h4>
+            </a>
+            <p style="font-family: 'Monda', sans-serif;color:#cdd0cb;">The extension of the simple neural network on 
+              Quadrillions of data points and using larger yet efficient architectures to learn these models gave rise 
+              to Deep Learning. We would be demonstrating how we can use Deep Learning Models in Tensorflow to Classify 
+              images and will give away the intuitional idea about CNNs ( Convolutional Neural Network), LSTMs ( 
+                Long Short Term Memory) and many more. We would also be briefing the main Problem Statement for
+                 Recognizance’21 in this workshop
+              
             </p>
           </li>
         </ol>
