--- a/templates/events/simulim.html
+++ b/templates/events/simulim.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block body_block %}
 <div class="light pt-3 pt-lg-5 pb-2 text-light container-fluid"
-  style="margin-top: 76.3px; margin-bottom: -1px; background-color: #0a043c;">
+  style="margin-top: 76.3px; margin-bottom: -1px; background-color: black;">
   <div class="container">
     <div class="section-header">
       <h1 class="font-weight-bold mb-5 eventName">
@@ -17,7 +17,7 @@
           <p class="font-weight-light mb-0"><span class="font-weight-bold" style="color:#e5707e">Time:</span> To be announced
           </p>
           <p class="font-weight-light mb-3"><span class="font-weight-bold" style="color:#e5707e">Team size:</span>
-            1 - 4</p>
+            1</p>
         </div>
         <hr class="d-none d-md-block bg-secondary">
       </div>
@@ -45,6 +45,15 @@
             </a>
             <p style="font-family: 'Monda', sans-serif;color:#cdd0cb;">This workshop aims to give you hands-on 
               experience in Electrical simulation in PSIM and MATLAB using the very famous and useful tool Simulink.
+            </p>
+          </li>
+          <li>
+            <a href="https://drive.google.com/drive/folders/187Zfmyi2zz7xw325EWRjXF9l8CYCp0T-" target="_blank" class="workshop_link">
+              <h4 style="font-family: 'Russo One', sans-serif;">Basics of Power Electronics</h4>
+            </a>
+            <p style="font-family: 'Monda', sans-serif;color:#cdd0cb;">This workshop aims to boost your knowledge on 
+              Power Electronics starting from the basics which includes thyristor, controlled rectifier, freewheeling 
+              diode with the simulation of them in MATLAB using SIMULINK
             </p>
           </li>
         </ol>
