--- a/templates/prastuti/schedule.html
+++ b/templates/prastuti/schedule.html
@@ -33,7 +33,7 @@
           <div>
             <ul>
               <li>
-                <a href="#" target="_blank">STL Containers, Binary Search & Z-Algorithm</a>
+                <a href="https://drive.google.com/file/d/1j1hzoOqkf5Q0u03ssISFLZL0VUxdVIbr/view?usp=sharing" target="_blank">STL Containers, Binary Search & Z-Algorithm</a>
               </li>
               <li>
                 <a href="https://drive.google.com/file/d/1TNQWI1sBOPpEtLtB4DppqaO6BdsK5JQm/view?usp=sharing" target="_blank">Graph & its Algorithms</a>
