--- a/templates/users/profile.html
+++ b/templates/users/profile.html
@@ -13,7 +13,7 @@
             <hr>
             <h2 id="myteams">MY TEAMS</h2>
             {% if not team_cnt %}
-            <h5 style="color:black; font-weight:bolder;">You have not participated in any events yet</h5>
+            <h5 style="color:white; font-weight:bolder;">You have not participated in any events yet</h5>
             
             {% endif %}
             <section id="my-teams">
@@ -69,7 +69,7 @@
 
             <h2 id="myteams">INVITATIONS</h2>
             {% if not inv_cnt %}
-            <h5 style="color:black; font-weight:bolder;">No pending invitations</h5>
+            <h5 style="color:white; font-weight:bolder;">No pending invitations</h5>
             {% endif %}
             <section id="invitations">
                 {% for team in teams %}
