--- a/templates/events/cryptx.html
+++ b/templates/events/cryptx.html
@@ -67,9 +67,9 @@
         <ul>
           <li><h4 style="font-family: 'Russo One', sans-serif;">Pradyumn Singh - 9559575645 </h4></li>
           <li><h4 style="font-family: 'Russo One', sans-serif;">Piyush Singh - 6370523297</h4></li>
-          <li><h4 style="font-family: 'Russo One', sans-serif;">Harsh Agarwal  </h4></li>
+          <li><h4 style="font-family: 'Russo One', sans-serif;">Harsh Agarwal - 8290536846 </h4></li>
           <li><h4 style="font-family: 'Russo One', sans-serif;">Disha Gupta - 6377848376</h4></li>
-          <li><h4 style="font-family: 'Russo One', sans-serif;">Sagardeep Thakre  </h4></li>
+          <li><h4 style="font-family: 'Russo One', sans-serif;">Sagardeep Thakre - 7470661414 </h4></li>
           <li><h4 style="font-family: 'Russo One', sans-serif;">Akarsh Vatsa - 6205044643</h4></li>
         </ul>
       </div>
