--- a/templates/events/consilium.html
+++ b/templates/events/consilium.html
@@ -40,7 +40,7 @@
       <div class="pl-2">
         <ol type="I">
           <li>
-            <a href="#" target="_blank" class="workshop_link">
+            <a href="https://drive.google.com/drive/u/2/folders/1vVDzRdm-59h28C_2avcrMrvgOYv0dviT" target="_blank" class="workshop_link">
               <h4 style="font-family: 'Russo One', sans-serif;">Number System and Boolean Algebra</h4>
             </a>
             <p style="font-family: 'Monda', sans-serif;color:#cdd0cb;">Analog and digital signals, Number system, 
@@ -48,7 +48,7 @@
             </p>
           </li>
           <li>
-            <a href="#" target="_blank" class="workshop_link">
+            <a href="https://drive.google.com/drive/u/2/folders/11VujZn8KrL_L3ax9b4EWrgA-Ey8UzsDw" target="_blank" class="workshop_link">
               <h4 style="font-family: 'Russo One', sans-serif;">Combinational Circuits</h4>
             </a>
             <p style="font-family: 'Monda', sans-serif;color:#cdd0cb;">Binary Number Representation-Unsigned magnitude 
