--- a/templates/prastuti/schedule.html
+++ b/templates/prastuti/schedule.html
@@ -229,10 +229,10 @@
           <div class="prev_workshop">Previous Workshops</div>
           <ul>
             <li>
-              <a href="#" target="_blank">Number System and Boolean Algebra</a>
+              <a href="https://drive.google.com/file/d/1wxTW1h-03kTvCGGOVNTr3habBUf4_pMj/view?usp=sharing" target="_blank">Number System and Boolean Algebra</a>
             </li>
             <li>
-              <a href="#" target="_blank">Combinational Circuits</a>
+              <a href="https://drive.google.com/file/d/1Zw8VqDq3TzR6V-RsxdRR84CchkI0Lpj_/view?usp=sharing" target="_blank">Combinational Circuits</a>
             </li>
             <li>
               <a href="#" target="_blank">Flip flops</a>
