--- a/templates/prastuti/schedule.html
+++ b/templates/prastuti/schedule.html
@@ -91,6 +91,9 @@
             <li>
               <a href="https://drive.google.com/file/d/1PwwPhx4ZJJEOdALdhrqH8XgPnlxVi0PI/view?usp=sharing" target="_blank">Fundamentals of Modern Cryptography</a>
             </li>
+            <li>
+              <a href="https://drive.google.com/file/d/1No_Bepk5-02QI_Ya2rDlL_yJZ0DrRvqX/view?usp=sharing" target="_blank">Cryptographic Maths</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -99,8 +102,8 @@
           <div class="up_workshop">Upcoming workshops</div>
           <ul>
             <li>
-              <a href="https://bit.ly/cryptX" target="_blank">Cryptographic Maths</a><br />
-              <small><cite>Feb 14 | 11:00AM - 12:30PM</cite></small>
+              <a href="https://bit.ly/cryptX" target="_blank">Coming Soon</a><br />
+              <small><cite></cite></small>
             </li>
           </ul>
         </div>
@@ -137,7 +140,7 @@
               <a href="https://drive.google.com/file/d/1eekhMeRqW5ql1A2AM29qZ_wWItVxh19C/view?usp=sharing" target="_blank">Basics of Python</a>
             </li>
             <li>
-              <a href="#" target="_blank">Concepts of Data Preprocessing</a>
+              <a href="https://drive.google.com/file/d/1ezOJ4_3l5qOglSoQRsYXRa2wLswgvFD0/view?usp=sharing" target="_blank">Concepts of Data Preprocessing</a>
             </li>
           </ul>
         </div>
@@ -147,7 +150,7 @@
           <div class="up_workshop">Upcoming workshops</div>
           <ul>
             <li>
-              <a href="#" target="_blank">Machine Learning Algorithms</a><br />
+              <a href="http://bit.ly/recognizance-2" target="_blank">Machine Learning Algorithms</a><br />
               <small><cite>Feb 16 | 6:30PM - 8:00PM</cite></small>
             </li>
           </ul>
@@ -234,9 +237,6 @@
             <li>
               <a href="https://drive.google.com/file/d/1Zw8VqDq3TzR6V-RsxdRR84CchkI0Lpj_/view?usp=sharing" target="_blank">Combinational Circuits</a>
             </li>
-            <li>
-              <a href="#" target="_blank">Flip flops</a>
-            </li>
           </ul>
         </div>
       </div>
@@ -245,8 +245,8 @@
           <div class="up_workshop">Upcoming workshops</div>
           <ul>
             <li>
-              <a href="https://bit.ly/2Np8uTN" target="_blank">Counters</a><br />
-              <small><cite>March 5 | 6:30PM - 8:00PM</cite></small>
+              <a href="https://bit.ly/2Np8uTN" target="_blank">Flip Flops</a><br />
+              <small><cite></cite></small>
             </li>
           </ul>
         </div>
