--- a/templates/events/codigo.html
+++ b/templates/events/codigo.html
@@ -33,7 +33,7 @@
             The event will be organised on HackerRank.<br><br> Happy Coding.
         </p>
         <a class="btn btn-outline-danger btn-md mt-4 px-3 rounded-0 no-btn-shadow " data-tilt target="_blank"
-          href="#">Problem Statement</a>
+          href="#">Problem Statement (Coming Soon)</a>
       </div>
     </div>
     <div>
