--- a/templates/events/consilium.html
+++ b/templates/events/consilium.html
@@ -32,7 +32,7 @@
             electronics concepts.
         </p>
         <a class="btn btn-outline-danger btn-md mt-4 px-3 rounded-0 no-btn-shadow " data-tilt target="_blank"
-          href="#">Problem Statement</a>
+          href="#">Problem Statement (Coming Soon)</a>
       </div>
     </div>
     <div>
@@ -54,13 +54,6 @@
             <p style="font-family: 'Monda', sans-serif;color:#cdd0cb;">Binary Number Representation-Unsigned magnitude 
               representation, Signed magnitude Representation, 1's complement representation, 2's complement 
               representation; Combinational Circuits-Adders, Decoder, Encoder, Multiplexer, Demultiplexer.
-            </p>
-          </li>
-          <li>
-            <a href="#" target="_blank" class="workshop_link">
-              <h4 style="font-family: 'Russo One', sans-serif;">Flip Flops</h4>
-            </a>
-            <p style="font-family: 'Monda', sans-serif;color:#cdd0cb;"> 
             </p>
           </li>
         </ol>
