--- a/templates/events/cryptx.html
+++ b/templates/events/cryptx.html
@@ -35,7 +35,7 @@
           as the challenge’s solution.<br><br>FLAG format :  cryptX{th1s_1s_a_fl4g}<br>Happy Hacking ;)
         </p>
         <a class="btn btn-outline-danger btn-md mt-4 px-3 rounded-0 no-btn-shadow " data-tilt target="_blank"
-          href="#">Problem Statement</a>
+          href="#">Problem Statement (Coming Soon)</a>
       </div>
     </div>
     <div>
@@ -58,6 +58,12 @@
             <p style="font-family: 'Monda', sans-serif;color:#cdd0cb;">The motivation for cryptography, 
               Network Security, Classical Encoding Schemes (ASCII, Hex, Base64), Substitution Ciphers (Caesar cipher,
                Monoalphabetic Ciphers)</p>
+          </li>
+          <li>
+            <a href="https://drive.google.com/drive/u/0/folders/1A9Ha-06GvYcmejPTRsagj03JXiixvC0P" target="_blank" class="workshop_link">
+              <h4 style="font-family: 'Russo One', sans-serif;">Cryptographic Maths</h4>
+            </a>
+            <p style="font-family: 'Monda', sans-serif;color:#cdd0cb;">CryptX</p>
           </li>
         </ol>
 
