--- a/templates/events/recognizance.html
+++ b/templates/events/recognizance.html
@@ -17,7 +17,7 @@
           <p class="font-weight-light mb-0"><span class="font-weight-bold" style="color:#e5707e">Time:</span> To be announced
           </p>
           <p class="font-weight-light mb-3"><span class="font-weight-bold" style="color:#e5707e">Team size:</span>
-            1 - 4</p>
+            1 - 2</p>
         </div>
         <hr class="d-none d-md-block bg-secondary">
       </div>
@@ -36,7 +36,7 @@
                 and NLP. To top it off it would be competition to squeeze out the least error 
                 and highest accuracy.<br><br>And may the Gradients be with you.</p>
         <a class="btn btn-outline-danger btn-md mt-4 px-3 rounded-0 no-btn-shadow " data-tilt target="_blank"
-          href="#">Problem Statement</a>
+          href="#">Problem Statement (Coming Soon)</a>
       </div>
     </div>
     <div>
@@ -54,7 +54,7 @@
             </p>
           </li>
           <li>
-            <a href="#" target="_blank" class="workshop_link">
+            <a href="https://drive.google.com/drive/folders/1uh8Hz8jX0v1tNIopUWSApavw6v7UcdH3" target="_blank" class="workshop_link">
               <h4 style="font-family: 'Russo One', sans-serif;">Concepts of Data Preprocessing</h4>
             </a>
             <p style="font-family: 'Monda', sans-serif;color:#cdd0cb;">A brief conceptual walkthrough will be given
