register button added
Signed-off-by: Himanshu Balasamanta <himanshubb.eee18@itbhu.ac.in>

--- a/templates/events/codigo.html
+++ b/templates/events/codigo.html
@@ -32,8 +32,12 @@
             The main focus will be on important data structures and algorithms used in problem solving.
             The event will be organised on HackerRank.<br><br> Happy Coding.
         </p>
-        <a class="btn btn-outline-danger btn-md mt-4 px-3 rounded-0 no-btn-shadow " data-tilt target="_blank"
-          href="#">Problem Statement (Coming Soon)</a>
+        <span><a class="btn btn-outline-danger btn-md mt-4 px-3 rounded-0 no-btn-shadow " data-tilt target="_blank"
+          href="#">Problem Statement (Coming Soon)</a></span>
+        <span><a class="btn btn-outline-info btn-md mt-4 px-3 rounded-0 no-btn-shadow"
+          href="{% url 'event_registration:register' 'Codigo' %}">
+          Register
+        </a></span>
       </div>
     </div>
     <div>
