--- a/templates/events/consilium.html
+++ b/templates/events/consilium.html
@@ -31,8 +31,12 @@
             statement will be chosen from real-life examples that can be synthesised using digital 
             electronics concepts.
         </p>
-        <a class="btn btn-outline-danger btn-md mt-4 px-3 rounded-0 no-btn-shadow " data-tilt target="_blank"
-          href="#">Problem Statement (Coming Soon)</a>
+        <span><a class="btn btn-outline-danger btn-md mt-4 px-3 rounded-0 no-btn-shadow " data-tilt target="_blank"
+          href="#">Problem Statement (Coming Soon)</a></span>
+        <span><a class="btn btn-outline-info btn-md mt-4 px-3 rounded-0 no-btn-shadow"
+          href="{% url 'event_registration:register' 'Consilium' %}">
+          Register
+        </a></span>
       </div>
     </div>
     <div>
