--- a/templates/events/cryptx.html
+++ b/templates/events/cryptx.html
@@ -34,8 +34,12 @@
           in the realm of cryptography. It is a CTF style event where a string a.k.a FLAG is expected to be submitted 
           as the challenge’s solution.<br><br>FLAG format :  cryptX{th1s_1s_a_fl4g}<br>Happy Hacking ;)
         </p>
-        <a class="btn btn-outline-danger btn-md mt-4 px-3 rounded-0 no-btn-shadow " data-tilt target="_blank"
-          href="#">Problem Statement (Coming Soon)</a>
+        <span><a class="btn btn-outline-danger btn-md mt-4 px-3 rounded-0 no-btn-shadow " data-tilt target="_blank"
+          href="#">Problem Statement (Coming Soon)</a></span>
+        <span><a class="btn btn-outline-info btn-md mt-4 px-3 rounded-0 no-btn-shadow"
+          href="{% url 'event_registration:register' 'CryptX' %}">
+          Register
+        </a></span>
       </div>
     </div>
     <div>
