--- a/templates/events/simulim.html
+++ b/templates/events/simulim.html
@@ -31,8 +31,12 @@
            predict its cost, efficiency and performance in the real world. It provides an important method of 
            analysis which is easily verified, communicated and understood. Across industries and disciplines, 
            simulation modelling provides valuable solutions by giving clear insights into complex systems.</p>
-        <a class="btn btn-outline-danger btn-md mt-4 px-3 rounded-0 no-btn-shadow " data-tilt target="_blank"
-          href="#">Problem Statement (Coming Soon)</a>
+           <span><a class="btn btn-outline-danger btn-md mt-4 px-3 rounded-0 no-btn-shadow " data-tilt target="_blank"
+            href="#">Problem Statement (Coming Soon)</a></span>
+          <span><a class="btn btn-outline-info btn-md mt-4 px-3 rounded-0 no-btn-shadow"
+            href="{% url 'event_registration:register' 'Simulim' %}">
+            Register
+          </a></span>
       </div>
     </div>
     <div>
