--- a/templates/events/recognizance.html
+++ b/templates/events/recognizance.html
@@ -35,8 +35,12 @@
                regression and classification. We mainly focus on simple Neural Networks, Computer Vision
                 and NLP. To top it off it would be competition to squeeze out the least error 
                 and highest accuracy.<br><br>And may the Gradients be with you.</p>
-        <a class="btn btn-outline-danger btn-md mt-4 px-3 rounded-0 no-btn-shadow " data-tilt target="_blank"
-          href="#">Problem Statement (Coming Soon)</a>
+          <span><a class="btn btn-outline-danger btn-md mt-4 px-3 rounded-0 no-btn-shadow " data-tilt target="_blank"
+            href="#">Problem Statement (Coming Soon)</a></span>
+          <span><a class="btn btn-outline-info btn-md mt-4 px-3 rounded-0 no-btn-shadow"
+            href="{% url 'event_registration:register' 'Recognizance' %}">
+            Register
+          </a></span>
       </div>
     </div>
     <div>
