--- a/templates/events/codigo.html
+++ b/templates/events/codigo.html
@@ -76,13 +76,13 @@
       <div>
         <h2 class="mt-5 mb-3 font-weight-bold" style="font-family: 'Righteous', cursive; color:#e27802">Coordinators</h2>
         <ul>
-            <li><h4 style="font-family: 'Russo One', sans-serif;">Anshuman Pathak - 7667307714 </h4></li>
-            <li><h4 style="font-family: 'Russo One', sans-serif;">Aman Singh - 9555358711</h4></li>
-            <li><h4 style="font-family: 'Russo One', sans-serif;">Aman Kumar - 9899039679</h4></li>
-            <li><h4 style="font-family: 'Russo One', sans-serif;">Chowdepalli Rajeshwar Reddy - 9440033545</h4></li>
-            <li><h4 style="font-family: 'Russo One', sans-serif;">Pradyumn Singh - 9559575465</h4></li>
-            <li><h4 style="font-family: 'Russo One', sans-serif;">Saurabh Singh Tiwari - 7024452828</h4></li>
-        </ul>
+          <li><h4><span style="font-family: 'Russo One', sans-serif;">Anshuman Pathak - <a href="tel:7667307714">7667307714</a></span></h4></li>
+          <li><h4><span style="font-family: 'Russo One', sans-serif;">Aman Singh - <a href="tel:9555358711">9555358711</a></span></h4></li>
+          <li><h4><span style="font-family: 'Russo One', sans-serif;">Aman Kumar - <a href="tel:9899039679">9899039679</a></span></h4></li>
+          <li><h4><span style="font-family: 'Russo One', sans-serif;">Chowdepalli Rajeshwar Reddy - <a href="tel:9440033545">9440033545</a></span></h4></li>
+          <li><h4><span style="font-family: 'Russo One', sans-serif;">Pradyumn Singh - <a href="tel:9559575465">9559575465</a></span></h4></li>
+          <li><h4><span style="font-family: 'Russo One', sans-serif;">Saurabh Singh Tiwari - <a href="tel:7024452828">7024452828</a></span></h4></li>
+      </ul>
       </div>
     </div>
   </div>
