clickable phone numbers for all events
Signed-off-by: Himanshu Balasamanta <himanshubb.eee18@itbhu.ac.in>

--- a/templates/events/consilium.html
+++ b/templates/events/consilium.html
@@ -66,11 +66,11 @@
       <div>
         <h2 class="mt-5 mb-3 font-weight-bold" style="font-family: 'Righteous', cursive; color:#e27802">Coordinators</h2>
         <ul>
-            <li><h4 style="font-family: 'Russo One', sans-serif;">Aman Bansal - 9468505562</h4></li>
-            <li><h4 style="font-family: 'Russo One', sans-serif;">Chowdepalli Rajeshwar Reddy - 9440033545</h4></li>
-            <li><h4 style="font-family: 'Russo One', sans-serif;">Divyank Tyagi - 9027461748</h4></li>
-            <li><h4 style="font-family: 'Russo One', sans-serif;">Palla Ratna Durga Sravan - 8074029973</h4></li>
-            <li><h4 style="font-family: 'Russo One', sans-serif;">Vinay Saini - 9649743184</h4></li>
+          <li><h4><span style="font-family: 'Russo One', sans-serif;">Aman Bansal - <a href="tel:9468505562">9468505562</a></span></h4></li>
+          <li><h4><span style="font-family: 'Russo One', sans-serif;">Chowdepalli Rajeshwar Reddy - <a href="tel:9440033545">9440033545</a></span></h4></li>
+          <li><h4><span style="font-family: 'Russo One', sans-serif;">Divyank Tyagi - <a href="tel:9027461748">9027461748</a></span></h4></li>
+          <li><h4><span style="font-family: 'Russo One', sans-serif;">Palla Ratna Durga Sravan - <a href="tel:8074029973">8074029973</a></span></h4></li>
+          <li><h4><span style="font-family: 'Russo One', sans-serif;">Vinay Saini - <a href="tel:9649743184">9649743184</a></span></h4></li>
         </ul>
       </div>
 
