--- a/templates/prastuti/home.html
+++ b/templates/prastuti/home.html
@@ -84,7 +84,14 @@
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 
 <script>
-  $(window).load(function() { $('.loader').hide(); });
+//   $(window).load(function() { $('.loader').hide(); });
+  $(window).on('load', function(){
+  setTimeout(removeLoader, 2000); 
+});
+  function removeLoader(){
+    $( ".loader" ).fadeOut(500, function() {
+      $( ".loader" ).remove(); //makes page more lightweight 
+  }); 
 //   setTimeout(function () {
 //     $(".loader").fadeOut();
 //     $(".loader_img").delay(150).fadeOut("slow");
