--- a/templates/prastuti/home.html
+++ b/templates/prastuti/home.html
@@ -89,7 +89,7 @@
 //     $('.loader').hide();
 //   }
     $(window).load(function() {
-    $('.loading').fadeOut("slow");
+    $('.loader').fadeOut("slow");
   });
 //   setTimeout(function () {
 //     $(window).load(function() { $('.loader').hide(); });
