--- a/templates/events/cryptx.html
+++ b/templates/events/cryptx.html
@@ -17,7 +17,7 @@
           <p class="font-weight-light mb-0"><span class="font-weight-bold" style="color:#e5707e">Time:</span> To be announced
           </p>
           <p class="font-weight-light mb-3"><span class="font-weight-bold" style="color:#e5707e">Team size:</span>
-            1 - 2</p>
+            1</p>
         </div>
         <hr class="d-none d-md-block bg-secondary">
       </div>
@@ -67,7 +67,9 @@
             <a href="https://drive.google.com/drive/u/0/folders/1A9Ha-06GvYcmejPTRsagj03JXiixvC0P" target="_blank" class="workshop_link">
               <h4 style="font-family: 'Russo One', sans-serif;">Cryptographic Maths</h4>
             </a>
-            <p style="font-family: 'Monda', sans-serif;color:#cdd0cb;">CryptX</p>
+            <p style="font-family: 'Monda', sans-serif;color:#cdd0cb;">XOR properties, Euclid’s Algorithm, Extended Euclid’s Algorithm, 
+              Modular Arithmetic,  Fermat’s Little Theorem, Euler’s Totient Function, Modulo Multiplicative Inverse
+            </p>
           </li>
         </ol>
 
