event ids added
Signed-off-by: Himanshu Balasamanta <himanshubb.eee18@itbhu.ac.in>

--- a/templates/prastuti/schedule.html
+++ b/templates/prastuti/schedule.html
@@ -9,7 +9,7 @@
     </div>
  
   <!--events starts from here -->
-  <div class="container single-timeline shadow-box event-name">
+  <div class="container single-timeline shadow-box event-name" id="Codigo">
     <div class="row">
       <div class="col">
         <div>
@@ -63,7 +63,7 @@
 
   <!--This is second event-->
 
-  <div class="container single-timeline shadow-box event-name">
+  <div class="container single-timeline shadow-box event-name" id="Cryptx">
     <div class="row">
       <div class="col">
         <div>
@@ -114,7 +114,7 @@
   <br />
   <!--And here comes the third 1-->
 
-  <div class="container single-timeline shadow-box event-name">
+  <div class="container single-timeline shadow-box event-name" id="Recognizance">
     <div class="row">
       <div class="col">
         <div>
@@ -161,7 +161,7 @@
   <br />
   <!--the fourth 1-->
 
-  <div class="container single-timeline shadow-box event-name">
+  <div class="container single-timeline shadow-box event-name" id="Simulim">
     <div class="row">
       <div class="col">
         <div>
@@ -209,7 +209,7 @@
   <br />
   <!--Fifth 1-->
 
-  <div class="container single-timeline shadow-box event-name">
+  <div class="container single-timeline shadow-box event-name" id="Consilium">
     <div class="row">
       <div class="col">
         <div>
