--- a/templates/prastuti/schedule.html
+++ b/templates/prastuti/schedule.html
@@ -102,7 +102,7 @@
           <div class="up_workshop">Upcoming workshops</div>
           <ul>
             <li>
-              <a href="https://bit.ly/cryptX" target="_blank">Coming Soon</a><br />
+              <a href="https://bit.ly/cryptX" target="_blank">Cipher Techniques</a><br />
               <small><cite></cite></small>
             </li>
           </ul>
@@ -142,6 +142,9 @@
             <li>
               <a href="https://drive.google.com/file/d/1ezOJ4_3l5qOglSoQRsYXRa2wLswgvFD0/view?usp=sharing" target="_blank">Concepts of Data Preprocessing</a>
             </li>
+            <li>
+              <a href="" target="_blank">Machine Learning Algorithms</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -150,8 +153,8 @@
           <div class="up_workshop">Upcoming workshops</div>
           <ul>
             <li>
-              <a href="http://bit.ly/recognizance-2" target="_blank">Machine Learning Algorithms</a><br />
-              <small><cite>Feb 16 | 6:30PM - 8:00PM</cite></small>
+              <a href="" target="_blank">Introduction to Neural Networks</a><br />
+              <small><cite>March 6 | 11:00AM - 1:00PM</cite></small>
             </li>
           </ul>
         </div>
