--- a/templates/prastuti/schedule.html
+++ b/templates/prastuti/schedule.html
@@ -248,8 +248,8 @@
           <div class="up_workshop">Upcoming workshops</div>
           <ul>
             <li>
-              <a href="https://bit.ly/2Np8uTN" target="_blank">Flip Flops</a><br />
-              <small><cite></cite></small>
+              <a href="https://bit.ly/2Np8uTN" target="_blank">Introduction to Proteus Software and Sequential circuits</a><br />
+              <small><cite>Feb 19 | 6:30PM - 8:30PM</cite></small>
             </li>
           </ul>
         </div>
