--- a/templates/prastuti/schedule.html
+++ b/templates/prastuti/schedule.html
@@ -240,6 +240,9 @@
             <li>
               <a href="https://drive.google.com/file/d/1Zw8VqDq3TzR6V-RsxdRR84CchkI0Lpj_/view?usp=sharing" target="_blank">Combinational Circuits</a>
             </li>
+            <li>
+              <a href="https://drive.google.com/file/d/1yFlRof8rRxg-KFCAI0XAGVmu8aRy6oOI/view?usp=sharing" target="_blank">Introduction to Proteus Software and Sequential circuits</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -248,8 +251,8 @@
           <div class="up_workshop">Upcoming workshops</div>
           <ul>
             <li>
-              <a href="https://bit.ly/2Np8uTN" target="_blank">Introduction to Proteus Software and Sequential circuits</a><br />
-              <small><cite>Feb 19 | 6:30PM - 8:30PM</cite></small>
+              <a href="https://bit.ly/2Np8uTN" target="_blank">Types of Flip Flops</a><br />
+              <small><cite>March 5 | 6:30PM - 8:30PM</cite></small>
             </li>
           </ul>
         </div>
