--- a/templates/events/consilium.html
+++ b/templates/events/consilium.html
@@ -60,6 +60,13 @@
               representation; Combinational Circuits-Adders, Decoder, Encoder, Multiplexer, Demultiplexer.
             </p>
           </li>
+          <li>
+            <a href="https://drive.google.com/drive/u/0/folders/14s4wzCF6UBoqB0Gge8ReuD4GGDYmMMVL" target="_blank" class="workshop_link">
+              <h4 style="font-family: 'Russo One', sans-serif;">Intro to Proteus and Sequential Circuits</h4>
+            </a>
+            <p style="font-family: 'Monda', sans-serif;color:#cdd0cb;">
+            </p>
+          </li>
         </ol>
 
       </div>
