--- a/templates/prastuti/schedule.html
+++ b/templates/prastuti/schedule.html
@@ -103,7 +103,7 @@
           <ul>
             <li>
               <a href="https://bit.ly/cryptX" target="_blank">Cipher Techniques</a><br />
-              <small><cite></cite></small>
+              <small><cite>March 6 | 6:30PM - 8:30PM</cite></small>
             </li>
           </ul>
         </div>
@@ -154,7 +154,7 @@
           <ul>
             <li>
               <a href="" target="_blank">Introduction to Neural Networks</a><br />
-              <small><cite>March 6 | 11:00AM - 1:00PM</cite></small>
+              <small><cite>March 6 | 11:00AM - 1:00PM (Tentative)</cite></small>
             </li>
           </ul>
         </div>
@@ -201,7 +201,7 @@
           <ul>
             <li>
               <a href="#" target="_blank">Converter Inverter 3-phase Rectifier</a><br />
-              <small><cite>March 7 | 11:00AM - 12:30PM</cite></small>
+              <small><cite>March 7 | 11:00AM - 12:30PM (Tentative)</cite></small>
             </li>
           </ul>
         </div>
