--- a/templates/prastuti/schedule.html
+++ b/templates/prastuti/schedule.html
@@ -50,7 +50,7 @@
           <div class="up_workshop">Upcoming workshops</div>
           <ul>
             <li>
-              <a href="#" target="_blank">Coming Soon</a><br />
+              <a href="#" target="_blank">No more workshops</a><br />
               <small><cite></cite></small>
             </li>
           </ul>
@@ -103,7 +103,7 @@
           <ul>
             <li>
               <a href="https://bit.ly/cryptX" target="_blank">Cipher Techniques</a><br />
-              <small><cite>March 6 | 6:30PM - 8:30PM</cite></small>
+              <small><cite>March 11 | 6:30PM - 8:30PM</cite></small>
             </li>
           </ul>
         </div>
@@ -143,7 +143,10 @@
               <a href="https://drive.google.com/file/d/1ezOJ4_3l5qOglSoQRsYXRa2wLswgvFD0/view?usp=sharing" target="_blank">Concepts of Data Preprocessing</a>
             </li>
             <li>
-              <a href="" target="_blank">Machine Learning Algorithms</a>
+              <a href="https://drive.google.com/file/d/11ISMZmDV_pwM54Nu9e62rPfXMZ_ZRgaE/view?usp=sharing" target="_blank">Machine Learning Algorithms</a>
+            </li>
+            <li>
+              <a href="https://drive.google.com/file/d/16gxVxV6v9X6mZbgBsjE7ADfoDj_h62YQ/view?usp=sharing" target="_blank">Introduction to Neural Networks</a>
             </li>
           </ul>
         </div>
@@ -153,8 +156,8 @@
           <div class="up_workshop">Upcoming workshops</div>
           <ul>
             <li>
-              <a href="" target="_blank">Introduction to Neural Networks</a><br />
-              <small><cite>March 6 | 11:00AM - 1:00PM (Tentative)</cite></small>
+              <a href="" target="_blank">Dwelling into Deep Learning</a><br />
+              <small><cite>March 13 | 11:00AM - 1:00PM</cite></small>
             </li>
           </ul>
         </div>
@@ -201,7 +204,7 @@
           <ul>
             <li>
               <a href="#" target="_blank">Converter Inverter 3-phase Rectifier</a><br />
-              <small><cite>March 7 | 11:00AM - 12:30PM (Tentative)</cite></small>
+              <small><cite>March 11 | 2:00PM - 3:30PM </cite></small>
             </li>
           </ul>
         </div>
@@ -243,6 +246,9 @@
             <li>
               <a href="https://drive.google.com/file/d/1yFlRof8rRxg-KFCAI0XAGVmu8aRy6oOI/view?usp=sharing" target="_blank">Introduction to Proteus Software and Sequential circuits</a>
             </li>
+            <li>
+              <a href="#" target="_blank">Types of Flip Flops</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -251,8 +257,8 @@
           <div class="up_workshop">Upcoming workshops</div>
           <ul>
             <li>
-              <a href="https://bit.ly/2Np8uTN" target="_blank">Types of Flip Flops</a><br />
-              <small><cite>March 5 | 6:30PM - 8:30PM</cite></small>
+              <a href="https://bit.ly/2Np8uTN" target="_blank">Counters & Shift Registers</a><br />
+              <small><cite>March 12 | 6:30PM - 8:00PM</cite></small>
             </li>
           </ul>
         </div>
